--- a/about-us.html
+++ b/about-us.html
@@ -596,7 +596,7 @@
 				<!-- projects end -->
 
 				<!-- scrollable parallax -->
-				<section class="parallax section section-text-light  section-parallax section-center py-0 my-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'scrollableParallax': true, 'scrollableParallaxMinWidth': 991, 'startOffset': 10, 'cssProperty': 'width', 'cssValueStart': 40, 'cssValueEnd': 100, 'cssValueUnit': 'vw'}" data-image-src="aboutpage/img/subhujotechnologies-aboutpage-getquote-1920x1280.jpg">
+				<section class="parallax section section-text-light  section-parallax section-center  py-0 my-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'scrollableParallax': true, 'scrollableParallaxMinWidth': 991, 'startOffset': 10, 'cssProperty': 'width', 'cssValueStart': 40, 'cssValueEnd': 100, 'cssValueUnit': 'vw'}" data-image-src="img/aboutpage/subhujotechnologies-aboutpage-getquote-1920x1280.png">
 					<div class="d-flex justify-content-center">
 						<div class="scrollable-parallax-wrapper">
 							<div class="container py-4 my-4">
@@ -616,6 +616,18 @@
 					</div>
 				</section>
 				<!-- scrollable parallax-end -->
+				<!-- <section class="parallax section section-text-light section-parallax section-center overlay overlay-show overlay-op-8 my-0" data-plugin-parallax data-plugin-options="{'speed': 2.0}"data-image-src="aboutpage/img/subhujotechnologies-aboutpage-getquote-1920x1280.jpg">
+					<div class="container py-5 my-3">
+						<div class="row justify-content-center text-center">
+							<div class="col">
+								<h4 class="text-11 font-weight-extra-bold mb-1 line-height-2">The Easiest Way</h4>
+								<p class="text-4 opacity-7 mb-4">Porto is a huge success, learn more about us.</p>
+
+								<a class="btn btn-gradient btn-xl font-weight-bold text-color-light py-3 text-2">GET STARTED NOW</a>
+							</div>
+						</div>
+					</div>
+				</section> -->
 
 				<section class="section section-default border-0 ">
 					<div class="container py-4">
@@ -758,7 +770,7 @@
 						<span>Get in Touch</span>
 					</div>
 					<div class="row py-4 my-4">
-						<div class="col-md-3 mb-4 mb-lg-0 col-12">
+						<div class="col-md-6  col-lg-3 mb-4 mb-lg-0 col-12">
 							<h5 class="text-3 mb-3 pb-1">CONTACT US</h5>
 							<p class="text-3 text-color-light mb-0"><a href="tel:0123456789" class="text-decoration-none text-color-light">(800) 123-4567</a></p>
 							<p class="mb-1">International: <a href="tel:0123456789" class="text-decoration-none">(333) 456-6670</a></p>
@@ -785,7 +797,7 @@
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="#">Single Post</a></li>
 									</ul>
 								</div>
-								<div class="col-6 col-lg-5 mb-4 mb-lg-0 col-12">
+								<div class=" col-lg-5 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Services</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="#">Application Development</a></li>
@@ -794,7 +806,7 @@
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="#">Datawarehousing</a></li>
 									</ul>
 								</div>
-								<div class="col-6 col-lg-3 mb-4 mb-lg-0 col-12">
+								<div class=" col-lg-3 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Quick Links</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="#">Home</a></li>
