--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 											</span>
 										</h3>
 										<h1 class="text-color-light font-weight-extra-bold text-12 mb-3 appear-animation text-center" data-appear-animation="blurIn" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">Application Development</h1>
-										<p class="text-4 text-color-light font-weight-light opacity-7 mb-0" data-plugin-animated-letters data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0}">Check out our Services and features</p>
+										<!-- <p class="text-4 text-color-light font-weight-light opacity-7 mb-0" data-plugin-animated-letters data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0}">Check out our Services and features</p> -->
 									</div>
 								</div>
 							</div>
@@ -214,7 +214,7 @@
 													</span>
 												</h3>
 												<h2 class="text-color-light font-weight-extra-bold text-12 mb-3 appear-animation" data-appear-animation="blurIn" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">Testing</h2>
-												<p class="text-4 text-color-light font-weight-light opacity-7 text-center mb-0" data-plugin-animated-letters data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0, 'animationSpeed': 30}">Lorem ipsum <strong class="text-color-light">1234</strong>  dolor sit amet, consectetur adipiscing elit.</p>
+												<!-- <p class="text-4 text-color-light font-weight-light opacity-7 text-center mb-0" data-plugin-animated-letters data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0, 'animationSpeed': 30}">Lorem ipsum <strong class="text-color-light">1234</strong>  dolor sit amet, consectetur adipiscing elit.</p> -->
 											</div>
 										</div>
 									</div>
@@ -237,7 +237,7 @@
 													</span>
 												</h3>
 												<h2 class=" text-12 text-color-light font-weight-extra-bold appear-animation mb-3" data-plugin-animated-letters data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0, 'animationSpeed': 300, 'animationName': 'fadeInRightShorterOpacity', 'letterClass': 'd-inline-block'}">IT /ITES Staffing</h2>
-												<p class="text-4 text-color-light font-weight-light text-center mb-0" data-plugin-animated-letters data-plugin-options="{'startDelay': 2000, 'minWindowWidth': 0}">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<!-- <p class="text-4 text-color-light font-weight-light text-center mb-0" data-plugin-animated-letters data-plugin-options="{'startDelay': 2000, 'minWindowWidth': 0}">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
 											</div>
 										</div>
 									</div>
@@ -265,7 +265,7 @@
 							<div class="col-lg-8">
 								<p>
 									Get in touch with us today to find out how Subhujo Technology can power up your  <span class="highlighted-word">organization</span>
-									<span>Phasellus blandit massa enikklam id valorem ipsum dolor sit amet, consectetur.</span>
+									<!-- <span>Phasellus blandit massa enikklam id valorem ipsum dolor sit amet, consectetur.</span> -->
 								</p>
 							</div>
 							<div class="col-lg-4">
@@ -405,7 +405,7 @@
 	<h2 class="font-weight-normal text-7 mb-5 text-center ">Our <strong class="font-weight-extra-bold text-color-thick">Services</strong></h2>
 <div class="row mb-2 pb-3">
 
-	<div class="col-md-6 col-lg-4 mb-5 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
+	<div class="col-md-6 col-lg-4 mb-5  appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
 		
 
 		<div class="card flip-card flip-card-3d bg-transparent text-center rounded-0">
@@ -428,7 +428,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-6 col-lg-4 mb-5 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
+	<div class="col-md-6 col-lg-4 mb-5 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
 		
 
 		<div class="card flip-card flip-card text-center rounded-0">
@@ -449,7 +449,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-6 col-lg-4 mb-5 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
+	<div class="col-md-6 col-lg-4 mb-5  appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 		
 
 		<div class="card flip-card flip-card text-center rounded-0">
@@ -469,9 +469,9 @@
 			</div>
 		</div>
 	</div>
-</div>
-	<div class="row mb-2 pb-3">
-	<div class="col-md-6 col-lg-4 mb-5 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
+
+	<!-- <div class="row mb-2 pb-3"> -->
+	<div class="col-md-6 col-lg-4 mb-5  appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
 		
 
 		<div class="card flip-card text-center rounded-0">
@@ -492,7 +492,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-6 col-lg-4 mb-5 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
+	<div class="col-md-6 col-lg-4 mb-5 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
 		
 
 		<div class="card flip-card flip-card text-center rounded-0">
@@ -513,7 +513,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-6 col-lg-4 mb-5 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
+	<div class="col-md-6 col-lg-4 mb-5  appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 		
 
 		<div class="card flip-card flip-card text-center rounded-0">
@@ -533,9 +533,10 @@
 			</div>
 		</div>
 	</div>
-</div>
-<div class="row mb-2 pb-3">
-	<div class="col-md-6 col-lg-4 mb-5 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
+<!-- </div> -->
+
+<!-- <div class="row mb-2 pb-3"> -->
+	<div class="col-md-6 col-lg-4 mb-5  appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
 		
 
 		<div class="card flip-card text-center rounded-0">
@@ -556,7 +557,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-6 col-lg-4 mb-5 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
+	<div class="col-md-6 col-lg-4 mb-5  appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
 		
 
 		<div class="card flip-card flip-card text-center rounded-0">
@@ -577,7 +578,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-6 col-lg-4 mb-5 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
+	<div class="col-md-6 col-lg-4 mb-5 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 		
 
 		<div class="card flip-card flip-card text-center rounded-0">
@@ -598,8 +599,8 @@
 		</div>
 	</div>
 </div>
-
 </div>
+<!-- </div> -->
 <!-- services -end-->
 				<div class="container mb-5 pb-4">
 
@@ -1004,7 +1005,7 @@
 						<span>Get in Touch</span>
 					</div>
 					<div class="row py-3 my-4">
-						<div class="col-md-3 mb-4 mb-lg-0 col-12">
+						<div class="col-md-6 col-lg-3 mb-4 mb-lg-0 col-12">
 							<h5 class="text-3 mb-3 pb-1">CONTACT US</h5>
 							<p class="text-3 text-color-light "><a href="tel:0123456789" class="text-decoration-none text-color-light">(800) 123-4567</a></p>
 							<p class="mb-1">International: <a href="tel:0123456789" class="text-decoration-none">(333) 456-6670</a></p>
@@ -1035,7 +1036,7 @@
 										
 									</ul>
 								</div>
-								<div class="col-6 col-lg-5 mb-4 mb-lg-0 col-12">
+								<div class=" col-lg-5 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Services</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Application-development">Application Development</a></li>
@@ -1046,7 +1047,7 @@
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Datawarehousing">testing</a></li>
 									</ul>
 								</div>
-								<div class="col-6 col-lg-3 mb-4 mb-lg-0 col-12">
+								<div class=" col-lg-3 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Quick Links</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./">Home</a></li>
