--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 							</div>
 
 							<!-- Carousel Slide 2 -->
-							<div class="owl-item position-relative overlay overlay-show overlay-op-8 lazyload" data-bg-src="img/slides/slide-bg-performance.jpg" style="background-size: cover; background-position: center;">
+							<div class="owl-item position-relative overlay overlay-show overlay-op-8 lazyload" data-bg-src="img/homepage/subhujotechnologies-homepage-topbanner-testing-1920x980.png" style="background-size: cover; background-position: center;">
 								<div class="container position-relative z-index-3 h-100">
 									<div class="row justify-content-center align-items-center h-100">
 										<div class="col-lg-6">
