updates of subhujo

--- a/Datawarehousing.html
+++ b/Datawarehousing.html
@@ -206,9 +206,9 @@
 
 								<div class="my-4">
 									<ul class="list list-icons list-primary list-borders m-0">
-										<li><i class="fas fa-check"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta.</li>
-										<li><i class="fas fa-check"></i> Quisque ut nulla at nunc vehicula lacinia.</li>
-										<li><i class="fas fa-check"></i> Vestibulum ante ipsum primis in faucibus orci luctus.</li>
+										<li><i class="fas fa-check"></i> Subhujo Technologies' data warehouse solutions, you can ensure maximum value from your invaluable organizational resource - data..</li>
+										<li><i class="fas fa-check"></i> Our expertise and experience in the field enables us to develop complete suite of services that range from data acquisition to transformation</li>
+										<li><i class="fas fa-check"></i> rapid advancements in big data technology.</li>
 									</ul>
 								</div>
 
