--- a/index.html
+++ b/index.html
@@ -305,29 +305,29 @@
 							<div class="col-sm-6 col-lg-3 mb-4 mb-lg-0">
 								<div class="counter">
 									<i class="icons icon-user text-color-dark"></i>
-							<strong class="text-color-light font-weight-extra-bold" data-to="1234" data-append="+">0</strong>
+							<strong class="text-color-light font-weight-extra-bold" data-to="35" data-append="+">0</strong>
 							<label class="text-4 mt-1">Happy Clients</label>
 								</div>
 							</div>
 							<div class="col-sm-6 col-lg-3 mb-4 mb-lg-0">
 								<div class="counter">
 									<i class="icons icon-badge text-color-dark"></i>
-							<strong class="text-color-light font-weight-extra-bold" data-to="12">0</strong>
+							<strong class="text-color-light font-weight-extra-bold" data-to="22">0</strong>
 							<label class="text-4 mt-1">Years In Business</label>
 								</div>
 							</div>
 							<div class="col-sm-6 col-lg-3 mb-4 mb-sm-0">
 								<div class="counter">
 									<i class="icons icon-graph text-color-dark"></i>
-							<strong class="text-color-light font-weight-extra-bold" data-to="123">0</strong>
-							<label class="text-4 mt-1">Projects Completed</label>
+							<strong class="text-color-light font-weight-extra-bold" data-to="120">0</strong>
+							<label class="text-4 mt-1">Technical resources</label>
 								</div>
 							</div>
 							<div class="col-sm-6 col-lg-3">
 								<div class="counter">
 									<i class="icon-trophy icons"></i>
-							<strong class="text-color-light font-weight-extra-bold" data-to="123">0</strong>
-							<label class="text-4 mt-1">Awards Achieved </label>
+							<strong class="text-color-light font-weight-extra-bold" data-to="15">0</strong>
+							<label class="text-4 mt-1">Technical resources</label>
 								</div>
 							</div>
 						</div>
@@ -338,18 +338,18 @@
 				<div class="container bg-white">
 
 					<div class="row text-center pt-3">
-						<div class="col-md-10 mx-md-auto">
+						<div class="col-md-11 mx-md-auto">
 							<h1 class="word-rotator slide font-weight-bold text-8 mb-3 appear-animation" data-appear-animation="fadeInUpShorter">
-								<span>Lorem  </span>
+								<span>subhujo technologies</span>
 								<span class="word-rotator-words bg-highlight">
-									<b class="is-visible">adipiscing</b>
-									<b>ipsum dolor </b>
-									<b>ipsum dolor</b>
+									<b class="is-visible">strategy</b>
+									<b>planning </b>
+									<b>infusion</b>
 								</span>
-								<span> consectetur adipiscing elit. </span>
+								<span>will develop your business growth</span>
 							</h1>
 							<p class=" appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat, ante nulla hendrerit arcu, ac tincidunt mauris lacus sed leo.
+								Subhujo technologies have the perfect formula to make your business soar. Our unique strategy, planning and infusion can help unlock unprecedented growth potential for you!
 							</p>
 						</div>
 					</div>
@@ -764,32 +764,45 @@
 					</div>
 
 					<div class="row text-center mt-5">
-						<div class="owl-carousel owl-theme carousel-center-active-item" data-plugin-options="{'responsive': {'0': {'items': 1}, '476': {'items': 1}, '768': {'items': 5}, '992': {'items': 7}, '1200': {'items': 7}}, 'autoplay': true, 'autoplayTimeout': 3000, 'dots': false}">
+						<div class="owl-carousel owl-theme " data-plugin-options="{'responsive': {'0': {'items': 1}, '476': {'items': 1}, '768': {'items': 5}, '992': {'items': 7}, '1200': {'items': 7}}, 'autoplay': true, 'autoplayTimeout': 3000, 'dots': false}">
 							<div>
-								<img class="img-fluid" src="img/logos/logo-1.png" alt="">
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-discovery-200x80.png" alt="">
 							</div>
 							<div>
-								<img class="img-fluid" src="img/logos/logo-2.png" alt="">
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-hcl-200x80.png" alt="">
 							</div>
 							<div>
-								<img class="img-fluid" src="img/logos/logo-3.png" alt="">
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-momentum-200x80.png" alt="">
 							</div>
 							<div>
-								<img class="img-fluid" src="img/logos/logo-4.png" alt="">
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-nedbank-200x80.png" alt="">
 							</div>
 							<div>
-								<img class="img-fluid" src="img/logos/logo-5.png" alt="">
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-postbank-200x80.png" alt="">
 							</div>
 							<div>
-								<img class="img-fluid" src="img/logos/logo-6.png" alt="">
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-sanral-200x80.png" alt="">
 							</div>
 							<div>
-								<img class="img-fluid" src="img/logos/logo-4.png" alt="">
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-standardbank-200x80.png" alt="">
 							</div>
 							<div>
-								<img class="img-fluid" src="img/logos/logo-2.png" alt="">
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-tcm-200x80.png" alt="">
+							</div>
+							<div>
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-tcta-200x80.png" alt="">
+							</div>
+							<div>
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-techmahindra-200x80.png" alt="">
+							</div>
+							<div>
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-transnet-200x80.png" alt="">
+							</div>
+							<div>
+								<img class="img-fluid" src="img/homepage/subhujotechnologies-homepage-ourclients-tsystems-200x80.png" alt="">
 							</div>
 						</div>
+						
 					</div>
 
 				</div>
@@ -959,7 +972,7 @@
 			</div>
 
 
-			<section class="section section-height-3 section-background section-text-light section-center overlay overlay-show overlay-op-9 overlay-color-primary m-0 appear-animation" data-appear-animation="fadeIn" style="background-image: url(img/bg-corporate-1-1.jpg); background-size: cover; background-position: center;">
+			<!-- <section class="section section-height-3 section-background section-text-light section-center overlay overlay-show overlay-op-9 overlay-color-primary m-0 appear-animation" data-appear-animation="fadeIn" style="background-image: url(img/bg-corporate-1-1.jpg); background-size: cover; background-position: center;">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-lg-10 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
@@ -998,7 +1011,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 			<footer id="footer">
 				<div class="container">
 					<div class="footer-ribbon">
@@ -1007,12 +1020,14 @@
 					<div class="row py-3 my-4">
 						<div class="col-md-6 col-lg-3 mb-4 mb-lg-0 col-12">
 							<h5 class="text-3 mb-3 pb-1">CONTACT US</h5>
-							<p class="text-3 text-color-light "><a href="tel:0123456789" class="text-decoration-none text-color-light">(800) 123-4567</a></p>
-							<p class="mb-1">International: <a href="tel:0123456789" class="text-decoration-none">(333) 456-6670</a></p>
+							<p class="text-3 text-color-light "><a href="tel:+918309292171" class="text-decoration-none text-color-light">Ph.no:+918309292171</a></p>
+							<p class="mb-1">International: <a href="tel:0123456789" class="text-decoration-none">+27115685487</a></p>
 							<p class="mb-1">Fax: (222) 531-8999</p>
 							<ul class="list list-icons list-icons-lg">
-								<li class="mb-1"><i class="far fa-dot-circle text-color-primary"></i><p class="m-0">234 Street Name, City Name</p></li>
-								<li class="mb-1"><i class="far fa-envelope text-color-primary"></i><p class="m-0"><a href="mailto:mail@example.com">mail@example.com</a></p></li>
+								<li class="mb-1"><i class="far fa-dot-circle text-color-primary"></i><p class="m-0">Bagh Lingampalli,
+									Narayanguda
+									Hyderabad</p></li>
+								<li class="mb-1"><i class="far fa-envelope text-color-primary"></i><p class="m-0"><a href="mailto:mail@example.com">info@subhujo.com</a></p></li>
 							</ul>
 							<ul class="footer-social-icons social-icons mt-2">
 								<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook"><i class="fab fa-facebook-f text-2"></i></a></li>
