--- a/Oracle.html
+++ b/Oracle.html
@@ -209,9 +209,9 @@
 
 								<div class="my-4">
 									<ul class="list list-icons list-primary list-borders m-0">
-										<li><i class="fas fa-check"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta.</li>
-										<li><i class="fas fa-check"></i> Quisque ut nulla at nunc vehicula lacinia.</li>
-										<li><i class="fas fa-check"></i> Vestibulum ante ipsum primis in faucibus orci luctus.</li>
+										<li><i class="fas fa-check"></i> Unlock the power of cloud, machine learning and iOCO Oracle Services (iOS) with Subuhjo technologies.</li>
+										<li><i class="fas fa-check"></i> Our machine learning technology powers everything from accounting to marketing, so you can get your business running optimally - all under one roof.</li>
+										<li><i class="fas fa-check"></i> Our Oracle mission critical servers are armed with virtualization capabilities and built-in efficiency management - transforming your IT landscape into an efficient, lower cost powerhouse!</li>
 									</ul>
 								</div>
 
@@ -290,14 +290,16 @@
 						<span>Get in Touch</span>
 					</div>
 					<div class="row py-3 my-4">
-						<div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+						<div class="col-md-6 col-lg-3 mb-4 mb-lg-0 col-12">
 							<h5 class="text-3 mb-3 pb-1">CONTACT US</h5>
-							<p class="text-3 text-color-light "><a href="tel:0123456789" class="text-decoration-none text-color-light">(800) 123-4567</a></p>
-							<p class="mb-1">International: <a href="tel:0123456789" class="text-decoration-none">(333) 456-6670</a></p>
+							<p class="text-3 text-color-light "><a href="tel:+918309292171" class="text-decoration-none text-color-light">Ph.no:+918309292171</a></p>
+							<p class="mb-1">International: <a href="tel:0123456789" class="text-decoration-none">+27115685487</a></p>
 							<p class="mb-1">Fax: (222) 531-8999</p>
 							<ul class="list list-icons list-icons-lg">
-								<li class="mb-1"><i class="far fa-dot-circle text-color-primary"></i><p class="m-0">234 Street Name, City Name</p></li>
-								<li class="mb-1"><i class="far fa-envelope text-color-primary"></i><p class="m-0"><a href="mailto:mail@example.com">mail@example.com</a></p></li>
+								<li class="mb-1"><i class="far fa-dot-circle text-color-primary"></i><p class="m-0">Bagh Lingampalli,
+									Narayanguda
+									Hyderabad</p></li>
+								<li class="mb-1"><i class="far fa-envelope text-color-primary"></i><p class="m-0"><a href="mailto:mail@example.com">info@subhujo.com</a></p></li>
 							</ul>
 							<ul class="footer-social-icons social-icons mt-2">
 								<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook"><i class="fab fa-facebook-f text-2"></i></a></li>
@@ -305,10 +307,10 @@
 								<li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in text-2"></i></a></li>
 							</ul>
 						</div>
-						<div class="col-md-9 mb-4 mb-lg-0 mb-sm-0">
+						<div class="col-md-9 mb-4 mb-lg-0 mb-sm-0 col-12">
 							
 							<div class="row pt-3">
-								<div class="col-6 col-lg-4 mb-4 mb-lg-0 col-12">
+								<div class="col-6 col-lg-4 mb-4 mb-lg-0">
 									<h5 class="text-3 mb-3">Legal Policies</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="
@@ -324,19 +326,21 @@
 								<div class=" col-lg-5 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Services</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Application Development</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Offshore Development</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Corporate Training</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Datawarehousing</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Application-development">Application Development</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Offshore-development">Offshore Development</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Corporate-training">Corporate Training</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Datawarehousing">Datawarehousing</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Datawarehousing">SAP</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Datawarehousing">testing</a></li>
 									</ul>
 								</div>
 								<div class=" col-lg-3 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Quick Links</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Home</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">About us</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Carrers</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Contact us</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./">Home</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./about-us">About us</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./carrers">Carrers</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./contact">Contact us</a></li>
 									</ul>
 								</div>
 								
