--- a/Application-development.html
+++ b/Application-development.html
@@ -178,6 +178,11 @@
 			<div class="col-md-12 align-self-center p-static text-center mt-2">
 				
 				<h1 class="font-weight-semibold text-brand  text-8 mb-3" data-plugin-animated-words data-plugin-options="{'contentType': 'word', 'animationName': 'fadeInUpShorter', 'animationSpeed': 200, 'startDelay': 0, 'minWindowWidth': 992}">Application Development </h1>
+				<!-- <div class="col-md-7 col-lg-12">
+					<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="0">
+						<h1 class="custom-text-background custom-big-font-size-1 text-14 font-weight-bold float-xl-end clearfix line-height-1 custom-ws-mobile-wrap ws-nowrap pb-2 mb-3 mb-xl-5" style="background-image: url(services/img/text-back.png);">STRATEGY EXECUTION</h1>
+					</div>
+				</div> -->
 			</div>
 			
 			
