--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<meta name="keywords" content="WebSite Template" />
 		<meta name="description" content="Subhujo Technologies">
-		<meta name="author" content="okler.net">
+		<meta name="author" content="">
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/subhujotechnologies-favicon-60x60.png" type="image/x-icon" />
@@ -153,12 +153,12 @@
 											</nav>
 										</div>
 										<ul class="header-social-icons social-icons d-none d-sm-block">
-											<li class="social-icons-facebook"><a href="http://www.facebook.com/"
+											<li class="social-icons-facebook"><a href="https://www.facebook.com/profile.php?id=100089807891732"
 													target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
 											</li>
-											<li class="social-icons-twitter"><a href="http://www.twitter.com/"
+											<li class="social-icons-twitter"><a href="SubhujoT"
 													target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-											<li class="social-icons-linkedin"><a href="http://www.linkedin.com/"
+											<li class="social-icons-linkedin"><a href=": https://www.linkedin.com/company/subhujo-technologies-private-limited/"
 													target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a>
 											</li>
 										</ul>
@@ -327,7 +327,7 @@
 								<div class="counter">
 									<i class="icon-trophy icons"></i>
 							<strong class="text-color-light font-weight-extra-bold" data-to="15">0</strong>
-							<label class="text-4 mt-1">Technical resources</label>
+							<label class="text-4 mt-1">Internal resources</label>
 								</div>
 							</div>
 						</div>
@@ -1030,9 +1030,9 @@
 								<li class="mb-1"><i class="far fa-envelope text-color-primary"></i><p class="m-0"><a href="mailto:mail@example.com">info@subhujo.com</a></p></li>
 							</ul>
 							<ul class="footer-social-icons social-icons mt-2">
-								<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook"><i class="fab fa-facebook-f text-2"></i></a></li>
-								<li class="social-icons-twitter"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i class="fab fa-twitter text-2"></i></a></li>
-								<li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in text-2"></i></a></li>
+								<li class="social-icons-facebook"><a href="https://www.facebook.com/profile.php?id=100089807891732 " target="_blank" title="Facebook"><i class="fab fa-facebook-f text-2"></i></a></li>
+								<li class="social-icons-twitter"><a href="http://www.twitter.com/SubhujoT" target="_blank" title="Twitter"><i class="fab fa-twitter text-2"></i></a></li>
+								<li class="social-icons-linkedin"><a href="https://www.linkedin.com/company/subhujo-technologies-private-limited/" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in text-2"></i></a></li>
 							</ul>
 						</div>
 						<div class="col-md-9 mb-4 mb-lg-0 mb-sm-0 col-12">
